--- a/BallRuner_AB/Config/DefaultEngine.ini
+++ b/BallRuner_AB/Config/DefaultEngine.ini
@@ -2,12 +2,16 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Main.Main
 GameDefaultMap=/Game/Main.Main
+GlobalDefaultGameMode=/Game/bLUEPRINTS/BP_GameMode.BP_GameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -54,6 +58,4 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 
-[/Script/Engine.RendererSettings]
-r.DefaultFeature.AutoExposure=False
 
