--- a/BallRuner_AB/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BallRuner_AB/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -107,9 +107,9 @@ LastLevel=/Game/Main
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=8.800 Y=8.800
-WindowSize=X=1353.600 Y=720.000
-InitiallyMaximized=True
+ScreenPosition=X=8.000 Y=8.000
+WindowSize=X=1353.000 Y=720.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -805,16 +805,17 @@ MovieSceneCapture.LastCompileMethod=Unknown
 MRUItem0=/Game/Main
 
 [ContentBrowserRecent]
-MRUItem0=/Game/bLUEPRINTS/BP_TriggerRestart
-MRUItem1=/Game/bLUEPRINTS/koko
-MRUItem2=/Game/bLUEPRINTS/BP_TreiggerRestart
-MRUItem3=/Game/bLUEPRINTS/BP_Treigger
-MRUItem4=/Game/bLUEPRINTS/BP_Ball
-MRUItem5=/Game/bLUEPRINTS/BP_GameMode
-MRUItem6=/Game/bLUEPRINTS/NewBlueprint
-MRUItem7=/Game/bLUEPRINTS/BP_PlayerPawn
-MRUItem8=/Game/bLUEPRINTS/BP_Crystal
-MRUItem9=/Game/Main
+MRUItem0=/Game/bLUEPRINTS/BP_Ball
+MRUItem1=/Game/bLUEPRINTS/BP_TriggerRestart
+MRUItem2=/Game/bLUEPRINTS/Materials/m_Crystal_01
+MRUItem3=/Game/bLUEPRINTS/BP_Crystal
+MRUItem4=/Game/bLUEPRINTS/koko
+MRUItem5=/Game/bLUEPRINTS/BP_TreiggerRestart
+MRUItem6=/Game/bLUEPRINTS/BP_Treigger
+MRUItem7=/Game/bLUEPRINTS/BP_GameMode
+MRUItem8=/Game/bLUEPRINTS/NewBlueprint
+MRUItem9=/Game/bLUEPRINTS/BP_PlayerPawn
+MRUItem10=/Game/Main
 
 [PlacementMode]
 RecentlyPlaced=/Game/bLUEPRINTS/BP_Ball.BP_Ball;
@@ -1332,13 +1333,51 @@ AudioComponent.ComponentReplication=True
 AudioComponent.Activation=True
 AudioComponent.Cooking=True
 AudioComponent.Events=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialEditorPreviewParameters.ParameterGroups=True
+PointLightComponent.Variable=True
+PointLightComponent.TransformCommon=True
+PointLightComponent.Sockets=True
+PointLightComponent.Light=True
+PointLightComponent.Rendering=True
+PointLightComponent.Lightmass=True
+PointLightComponent.Performance=True
+PointLightComponent.LightFunction=True
+PointLightComponent.DistanceFieldShadows=True
+PointLightComponent.Light Profiles=True
+PointLightComponent.Tags=True
+PointLightComponent.ComponentReplication=True
+PointLightComponent.Cooking=True
+PointLightComponent.Events=True
+BP_Ball_C.Default=True
 
 [AssetEditorToolkitTabLocation]
-/Game/bLUEPRINTS/BP_Crystal.BP_Crystal=1
+/Game/bLUEPRINTS/BP_Crystal.BP_Crystal=0
 /Game/Main.Main:PersistentLevel.Main=1
 /Game/bLUEPRINTS/BP_GameMode.BP_GameMode=0
 /Game/bLUEPRINTS/BP_TreiggerRestart.BP_TreiggerRestart=1
 /Game/bLUEPRINTS/koko.koko=0
+/Game/bLUEPRINTS/BP_TriggerRestart.BP_TriggerRestart=0
+/Game/bLUEPRINTS/Materials/m_Crystal_01.m_Crystal_01=0
+/Game/bLUEPRINTS/BP_Ball.BP_Ball=1
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1347,6 +1386,8 @@ GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 Object=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" "
+MaterialExpressionConstant3Vector="\"Object.Constant\" "
+MaterialExpression=
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -1427,5 +1468,46 @@ OnlyBuildVisibility=False
 
 [SuppressableDialogs]
 ExtrudeCoordsWarning=True
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
 
 
