--- a/BallRuner_AB/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BallRuner_AB/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,11 +105,12 @@ LastLevel=/Game/Main
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/bLUEPRINTS/BP_TriggerRestart.BP_TriggerRestart
 
 [RootWindow]
 ScreenPosition=X=8.000 Y=8.000
 WindowSize=X=1353.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -805,10 +806,10 @@ MovieSceneCapture.LastCompileMethod=Unknown
 MRUItem0=/Game/Main
 
 [ContentBrowserRecent]
-MRUItem0=/Game/bLUEPRINTS/BP_Ball
-MRUItem1=/Game/bLUEPRINTS/BP_TriggerRestart
-MRUItem2=/Game/bLUEPRINTS/Materials/m_Crystal_01
-MRUItem3=/Game/bLUEPRINTS/BP_Crystal
+MRUItem0=/Game/bLUEPRINTS/BP_TriggerRestart
+MRUItem1=/Game/bLUEPRINTS/BP_Crystal
+MRUItem2=/Game/bLUEPRINTS/BP_Ball
+MRUItem3=/Game/bLUEPRINTS/Materials/m_Crystal_01
 MRUItem4=/Game/bLUEPRINTS/koko
 MRUItem5=/Game/bLUEPRINTS/BP_TreiggerRestart
 MRUItem6=/Game/bLUEPRINTS/BP_Treigger
@@ -1368,9 +1369,35 @@ PointLightComponent.ComponentReplication=True
 PointLightComponent.Cooking=True
 PointLightComponent.Events=True
 BP_Ball_C.Default=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+K2Node_Timeline.GraphNodeDetail=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
 
 [AssetEditorToolkitTabLocation]
-/Game/bLUEPRINTS/BP_Crystal.BP_Crystal=0
+/Game/bLUEPRINTS/BP_Crystal.BP_Crystal=1
 /Game/Main.Main:PersistentLevel.Main=1
 /Game/bLUEPRINTS/BP_GameMode.BP_GameMode=0
 /Game/bLUEPRINTS/BP_TreiggerRestart.BP_TreiggerRestart=1
@@ -1388,6 +1415,13 @@ Object=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" "
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 MaterialExpression=
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent=
+ActorComponent=
+SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [SelectionDetails]
 PreserveScaleRatio=True
